2018-02-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-971

	* src/m_ppath.cc (ppathPlaneParallel): Managed to commit with a
	remaining typo in the code.

2018-02-26  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-970

	* src/m_ppath.cc (ppathPlaneParallel): Just started.

2018-02-23  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-969

	* src/gridded_fields.{cc,h}: End of line added to
	higher order fields when printing.

	* src/linefunctions.cc:  Added Linefunctions::set_lineshape
	to compute the line shape

	* src/linescaling.cc:  Forgot a minus sign...

	* src/m_radiation_field.cc:  Now also deals with the transmission
	field required by NLTE computations.  Also changed how the integration
	happens to a separate function, removing some of the optional
	arguments I introduced before.  Again, no one should be using these
	functions yet as they just serve to prototype necessary input/output
	for the full nlte-approach
	
	* src/{methods,workspace}.cc:  Added transmission_field
	and changed input/output of some of the silly field-computers.
	
	There should be just one parameter missing at this point before
	the output becomes nlte_field instead of these temporaries

2018-02-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-968

	* src/m_basic_types.cc, src/methods.cc:

	Add convenience method Tensor3ExtractFromTensor4.

2018-02-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-967

	* Preliminary implementation of support for Hitran cross section
	species. http://hitran.org/xsc/
	Since available measurements of cross section data are very sparse (few
	temperatures/pressures) depending on species, the calculations in ARTS
	are based on one reference cross section at low pressure for each
	species. The cross section data is then broadened for the desired
	pressure by convolution with a Lorentz function.  The FWHM of the
	Lorentz function is determined by an approximation.  The coefficients